fix(style): svg now uses `filter: invert(0.85);` under dark mode

--- a/assets/uts-style.css
+++ b/assets/uts-style.css
@@ -132,9 +132,18 @@ svg.embedded-tex-svg {
     max-width: 97%;
 }
 
-:root[data-applied-mode="dark"] svg.embedded-tex-svg text {
+:root[data-applied-mode="dark"] svg.embedded-tex-svg {
+    filter: invert(0.85);
+}
+
+
+/* :root[data-applied-mode="dark"] svg.embedded-tex-svg text {
     fill: white;
 }
+
+:root[data-applied-mode="dark"] svg.embedded-tex-svg path {
+    stroke: white;
+} */
 
 section[data-taxon="Remark"] {
     border-left: 5px solid #458933;
